fix: all color buttons are visible

--- a/public/main.css
+++ b/public/main.css
@@ -376,7 +376,7 @@ body {
 #interactive-bar-whiteboard {
     display: inline-grid;
     position: relative;
-    height: 352px;
+    height: 602px;
 }
 
 
